# streamlit-analyse-produit

./: .env  .gitignore  README.md  Taskfile.yml  environment.yml  pyproject.toml  snowflake.yml  streamlit_app.py
.github/workflows/: preprod.yml  prod.yml
pages/: my_page.py
